# legalguard-ai

./: .env.example  .gitignore  README.md  amplify.yml  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/guardrails/: config.yml  rails.co
backend/app/middleware/: __init__.py  security.py
backend/app/routers/: __init__.py  agent.py  benchmark.py  chat.py  complaint.py  dashboard.py  geocoder.py  glossary.py  graph.py  ingest.py  judgment.py  predict.py  prompts.py  responsible_ai.py  search.py  stt.py  tracking.py
backend/app/services/: access_policy_service.py  audit_service.py  (+32 more)
backend/aws/: buildspec.yml  deploy.sh  docker-compose.geocoder.yml  env.production
backend/migrations/: 001_initial_schema.sql  README.md
backend/tests/: test_access_policy_service.py  test_audit_service.py  test_bm25_indexer.py  test_chatbot_service.py  test_complaint_service.py  test_dashboard_live.py  test_dashboard_service.py  test_dedup_service.py  test_efiling_xml.py  test_embedding_service.py  test_geocoder_service.py  test_ingestion_job_service.py  test_ingestion_orchestrator.py  test_langgraph_engine.py  test_legal_glossary.py  test_legal_graph.py  test_metadata_extractor.py  test_nitibench.py  test_openlaw_ingestion.py  test_pdf_extractor.py  test_pii_masking.py  test_predict.py  test_responsible_ai.py  test_search_pipeline.py  test_security_middleware.py  test_semantic_cache.py  test_thai_chunker.py
(+134 files in other folders)
