[project]
name = "legalguard-ai-backend"
version = "0.1.0"
description = "LegalGuard AI Backend - Smart Court AI Enhancement"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-openai>=0.2.0",
    "nemoguardrails>=0.11.0",
    "pythainlp>=5.0.0",
    "easyocr>=1.7.0",
    "PyMuPDF>=1.24.0",
    "qdrant-client>=1.11.0",
    "redis>=5.0.0",
    "rapidfuzz>=3.9.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "tantivy>=0.22.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "faiss-cpu>=1.8.0",
    "networkx>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
